# tools-registry

./: .gitignore  .gitleaks.toml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OSS-PREP-NOTES.md  README.md  SECURITY.md  USAGE.md  pyproject.toml  render.yaml
.agents/skills/add-oauth-provider/: SKILL.md
.agents/skills/dev-local/: SKILL.md
.agents/skills/google-ads/: SKILL.md
.agents/skills/google-analytics/: SKILL.md
.agents/skills/google-search-console/: SKILL.md
.agents/skills/linkedin/: SKILL.md
.agents/skills/tools-registry-context/: MAINTAINING.md  SKILL.md
.agents/skills/tools-registry-context/scripts/: build-map.py  drift.sh
.agents/skills/write-provider-skill/: SKILL.md
.claude/skills/tools-registry-context/: MAP.md  SKILL.md  fragments.config
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  labeler.yml  stale.yml
docs/: DASHBOARD-TOUR.md  ONBOARDING.md  TUTORIAL.md  tutorial.html
docs/context/: README.md
docs/context/architecture/: auth-secrets.md  data-model.md  local-run.md  multi-tenancy.md  proxy-model.md  super-admin.md
docs/context/foundation/: charter.md
docs/context/interface/: api.md  cli.md  dashboard.md  env-import.md  landing-sandbox.md  onboarding.md  shell.md  skill.md
docs/context/ops/: deploy.md
docs/context/reference/: glossary.md
scripts/: dev-local.sh
src/treg/: __init__.py  __main__.py  agents.py  api.py  audit.py  cli.py  config.py  convert.py  crypto.py  db.py  demo.py  egress.py  email.py  fsjail.py  health.py  injectors.py  localrun.py  models.py  oauth.py  oauth_providers.py  providers.py  proxy.py  pubfeed.py  ratestore.py  runner.py  sandbox.py  session.py  shell.py  skills.py
src/treg/web/: index.html  install.sh  landing.html  legal.css  llms.txt  privacy.html  quickstart.md  skill.md  terms.html  tutorial-access.md  tutorial-import-shell.md  tutorial.html  tutorial.js  tutorial.md
src/treg/web/logos/: README.md
src/treg/web/tour/: index.html  tour.js
tests/: conftest.py  test_access.py  test_admin.py  test_agents.py  test_auth.py  test_auth_email.py  test_body_encoding.py  test_bughunt_server.py  test_cli.py  test_cli_call_query.py  test_connection_health.py  test_connections.py  test_convert.py  test_dashboard_markup.py  test_detail_pages.py  test_egress.py  test_fsjail.py  test_health.py  test_injectors.py  test_invites_mine.py  test_key_providers.py  test_live_wire.py  test_localrun.py  test_login_page.py  test_migration.py  test_migration_ddl.py  test_oauth_connect.py  test_oauth_providers_m3.py  test_oauth_refresh.py  test_oauth_registry.py  test_onboard.py  test_operational.py  test_orgs_isolation.py  test_orgs_mgmt.py  test_passthrough.py  test_providers.py  test_pubfeed.py  test_public_demo.py  test_ratestore.py  test_run.py  (+12 more)
